--- a/diplom-frontend/src/App.css
+++ b/diplom-frontend/src/App.css
@@ -1,9 +1,14 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  min-height: 100%;
   padding: 2rem;
-  text-align: center;
+  background-color: rgba(245, 245, 245);
 }
+
+button:focus { outline: none !important;;}
 
 .logo {
   height: 6em;
@@ -27,11 +32,11 @@
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
 .card {
   padding: 2em;
