--- a/diplom-frontend/src/App.css
+++ b/diplom-frontend/src/App.css
@@ -1,10 +1,8 @@
 #root {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  min-height: 100%;
-  padding: 2rem;
+  padding-top: 64px;
+  padding-left: 250px;
+  width: 100%;
+  min-height: 100vh;
   background-color: rgba(245, 245, 245);
 }
 
